--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -23,5 +23,6 @@
     }
   },
   "extends": ["./tsconfig.base.json"],
-  "include": ["src"]
+  "include": ["src"],
+  "exclude": ["src/components/ui/calendar.tsx"]
 }
