--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "@types/deno": "^2.3.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "firebase": "^11.1.0",
     "cmdk": "^1.1.1",
     "embla-carousel-react": "^8.6.0",
     "hono": "^4.7.11",
